--- a/style.css
+++ b/style.css
@@ -1020,6 +1020,18 @@ textarea {
 .page-id-11 .wp-block-columns {
 	margin-top: 1.5rem;
 }
+.page-id-11 .latest-blog-posts article {
+	margin: 0 1rem 2.5rem 1rem;
+	box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+	text-align: center;
+	padding-bottom: 0.5rem;
+}
+.page-id-11 .latest-blog-posts article a {
+	font: "Fira Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+	text-decoration: none;
+	font-weight: 700;
+	color: #003c71;
+}
 @media (min-width: 50em) {
 	.page-id-11 .site-main {
 		max-width: 80%;
@@ -1040,16 +1052,7 @@ textarea {
 		flex-direction: row;
 		justify-content: center;
 	}
-	.page-id-11 .latest-blog-posts article {
-		margin: 0 1rem 2.5rem 1rem;
-		box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
-		text-align: center;
-	}
 	.page-id-11 .latest-blog-posts article a {
-		font: "Fira Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-		text-decoration: none;
-		font-weight: 700;
-		color: #003c71;
 		align-items: flex-end;
 	}
 }
